# Indigo

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  LICENSE-history  LICENSE.md  README.md  auto_rebase.sh  change_std.py  conanfile.py  conanfile.txt  el_query.json  flake.nix  indigo.natvis  pyproject.toml  q.json  r.json  requirements.txt  setup.sh  sonar-project.properties  start_service.sh  test.mol  vcpkg.json
api/: CHANGELOG.md  CMakeLists.txt  LICENSE.GPL  Makefile  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  all-release-linux.sh  all-release-osx.sh  all-release-sun.sh  all-release-windows.bat  clean-release-osx.sh  clean-release-windows.bat  generate-python.py  get_indigo_version.py  indigo-api.sln  indigo-api.vcproj  indigo-api.vcxproj  indigo-dotnet-release.bat  indigo-java-release-linux.sh  indigo-java-release-sun.sh  indigo-java-release-win.bat  indigo-libs-release-linux.sh  indigo-libs-release-sun.sh  indigo-libs-release-win.bat  indigo-python-release-linux.sh  indigo-python-release-win.bat  indigo-version.cmake  indigo.h  indigo.so.map  indigo_cpp.h  make-cs-wrappers.py  make-dotnet-wrappers.py  make-java-wrappers.py  make-python-wrappers.py  universal-java-nosun.sh  universal-java.sh  universal-python.sh
bingo/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.GPL  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  README-BUILD.txt  all-release-linux.sh  all-release-osx.sh  all-release-sun.sh  all-release-windows.bat  bingo-core-c.vcproj  bingo-core-c.vcxproj  bingo-core-c.vcxproj.filters  bingo-core.vcproj  bingo-core.vcxproj  bingo-core.vcxproj.filters  bingo-oracle-install.bat  bingo-oracle-install.sh  bingo-oracle.vcproj  bingo-oracle.vcxproj  bingo-oracle.vcxproj.filters  bingo-release.sh  bingo-version.cmake  bingo.sln  bingo_core_parallel.cpp  bingo_core_parallel.h  clean-release-windows.bat  make-all.sun.32.sh  make-all.sun.64.sh  mango_core_parallel.cpp  release-linux.32.sh  release-linux.64.sh  release-sqlserver.bat  release-sun-32.sh  release-sun-64.sh  release-win-32.bat  release-win-64.bat  release-win-sub.bat
common/: CMakeLists.txt
experimental/: CMakeLists.txt  atom.h  item.h  structure.h
graph/: CMakeLists.txt  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  automorphism_search.h  aux_path_finder.h  biconnected_decomposer.h  cycle_basis.h  cycle_enumerator.h  dfs_walk.h  edge_rotation_matcher.h  edge_subgraph_enumerator.h  embedding_enumerator.h  embeddings_storage.h  filter.h  graph.h  graph.vcproj  graph.vcxproj  graph.vcxproj.filters  graph_affine_matcher.h  graph_constrained_bmatching_finder.h  graph_decomposer.h  graph_fast_access.h  graph_highlighting.h  graph_iterators.h  graph_perfect_matching.h  graph_subchain_enumerator.h  graph_subtree_enumerator.h  graph_vertex_equivalence.h  max_common_subgraph.h  morgan_code.h  path_enumerator.h  ring_canonizer.h  scaffold_detection.h  shortest_path_finder.h  simple_cycle_basis.h  skew_symmetric_flow_finder.h  skew_symmetric_network.h  spanning_tree.h  subgraph_hash.h  (+1 more)
http/: Dockerfile  indigo_http.py  openapi.json  openapishema.json  pyproject.toml
layout/: CMakeLists.txt  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  attachment_layout.h  attachment_layout_smart.h  cleaner2d.h  layout.vcproj  layout.vcxproj  layout.vcxproj.filters  layout_pattern.h  layout_pattern_smart.h  metalayout.h  molecule_cleaner_2d.h  molecule_layout.h  molecule_layout_graph.h  molecule_layout_graph_smart.h  molecule_layout_macrocycles.h  reaction_layout.h  refinement_state.h  refinement_state_smart.h
libpng-src/: CMakeLists.txt  libpng.vcproj  libpng.vcxproj
molecule/: CMakeLists.txt  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  alkanes.inc  base_molecule.h  basic_elements.inc  canonical_smiles_saver.h  cmf_loader.h  cmf_saver.h  cmf_symbol_codes.h  cml_loader.h  cml_saver.h  elements.h  gross_formula.h  haworth_projection_finder.h  icm_common.h  icm_loader.h  icm_saver.h  inchi_parser.h  inchi_wrapper.h  json_loader.h  max_common_submolecule.h  molecule.h  molecule.vcproj  molecule.vcxproj  molecule.vcxproj.filters  molecule_3d_constraints.h  molecule_allene_stereo.h  molecule_arom.h  molecule_arom_match.h  molecule_attachments_search.h  molecule_auto_loader.h  molecule_automorphism_search.h  molecule_cdx_loader.h  molecule_cdx_saver.h  molecule_cdxml_saver.h  molecule_chain_fingerprints.h  molecule_cis_trans.h  molecule_cml_loader.h  (+58 more)
oci/: CMakeLists.txt
reaction/: CMakeLists.txt  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  base_reaction.h  base_reaction_substructure_matcher.h  canonical_rsmiles_saver.h  crf_common.h  crf_loader.h  crf_saver.h  icr_loader.h  icr_saver.h  query_reaction.h  reaction.h  reaction.vcproj  reaction.vcxproj  reaction.vcxproj.filters  reaction_auto_loader.h  reaction_automapper.h  reaction_cdx_loader.h  reaction_cdx_saver.h  reaction_cdxml_saver.h  reaction_checker.h  reaction_cml_loader.h  reaction_cml_saver.h  reaction_enumerator_state.h  reaction_exact_matcher.h  reaction_fingerprint.h  reaction_gross_formula.h  reaction_highlighting.h  reaction_json_loader.cpp  reaction_json_loader.h  reaction_json_saver.h  reaction_neighborhood_counters.h  reaction_product_enumerator.h  reaction_substructure_matcher.h  reaction_transformation.cpp  reaction_transformation.h  rsmiles_loader.h  rsmiles_saver.h  (+2 more)
render2d/: CMakeLists.txt  render.h  render2d.vcproj  render2d.vcxproj  render_base.h  render_cdxml.h  render_common.h  render_context.h  render_grid.h  render_internal.h  render_item.h  render_item_aux.h  render_item_column.h  render_item_comment.h  render_item_container.h  render_item_factory.h  render_item_frag.h  render_item_fragment.h  render_item_hline.h  render_item_molecule.h  render_item_reaction.h  render_molecule.h  render_params.h  render_reaction.h  render_single.h
tinyxml/: CMakeLists.txt  Makefile.sun.32  Makefile.sun.64  Makefile.sun.common  tinyxml.vcproj  tinyxml.vcxproj
(+8642 files in other folders)
