[tool.poetry]
name = "indigo_http"
version = "0.0.1"
description = ""
authors = ["Ruslan Khyurri <ruslan_khyurri@epam.com>", "Sergei Petrov <sergei_petrov3@epam.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
"epam.indigo" = "^1.4.3"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
