PROJECT(ZLIB)
if(USE_LOCAL_ZLIB)
    set(ZLIB_FOUND "NO")
    message(STATUS "Using local ZLib")
else()
    find_package(ZLIB)
endif()
if (NOT ZLIB_FOUND)
    file (GLOB ZLib_src src/*.c* src/*.def)
    file (GLOB ZLib_headers include/*.h*)
	set(ZLib_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
    set(ZLib_HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
    include_directories(${ZLib_HEADERS_DIR})

    if(APPLE)
        set(CMAKE_OSX_ARCHITECTURES "i386;x86_64")
    endif()

    add_library(z ${ZLib_src} ${ZLib_headers})
        
    if(VISIBILITY_HIDDEN)
        SET_TARGET_PROPERTIES(z PROPERTIES COMPILE_FLAGS "-fvisibility=hidden")
    endif()    
endif()
