PROJECT(ZLIB)
if(USE_LOCAL_ZLIB)
    set(ZLIB_FOUND "NO")
else()
    find_package(ZLIB)
endif()
if (NOT ZLIB_FOUND)
    message(STATUS "Using local ZLib")
    file (GLOB ZLib_src src/*.c* src/*.def)
    file (GLOB ZLib_headers include/*.h*)
    set(ZLib_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
    set(ZLib_HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
    include_directories(${ZLib_HEADERS_DIR})

    if(APPLE)
        set(CMAKE_OSX_ARCHITECTURES "i386;x86_64")
    endif()

    add_library(z ${ZLib_src} ${ZLib_headers})
        
    if(VISIBILITY_HIDDEN)
        SET(COMPILE_FLAGS "${COMPILE_FLAGS} -fvisibility=hidden")
    endif()    
    if(UNIX OR APPLE)
        SET(COMPILE_FLAGS "${COMPILE_FLAGS} -fPIC")
    endif()
    set_target_properties(z PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS}")
	 set_property(TARGET z PROPERTY FOLDER "third_party")
endif()
